swagger 수정 및 controller 로직 수정
